fix link overflow

--- a/src/element/Text.css
+++ b/src/element/Text.css
@@ -66,6 +66,7 @@
     margin: 0;
     max-width: 260px;
     white-space: nowrap;
+    overflow: hidden;
     text-overflow: ellipsis;
     color: var(--highlight);
     height: var(--font-size);
